# editbuffer

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/command_edit_microbench/: README.md  task_paths.txt  task_paths_repair.txt  task_paths_smoke.txt  task_paths_syntax_hard.txt  task_paths_syntax_repair.txt  treatment_tool_policy.md
benchmarks/command_edit_microbench/configs/: baseline.json  capture_only.json  mcp_only.json  treatment_command_buffer.json
benchmarks/command_edit_microbench/tasks/argparse_transformer/: instruction.md  task.toml
benchmarks/terminal_bench/: README.md
benchmarks/terminal_bench/configs/: baseline.json  capture_only.json  editbuffer.mcp.json  mcp_only.json  treatment_command_buffer.json
benchmarks/terminal_bench/task_subsets/: pilot_shell_heavy.txt  smoke.txt
docs/: mcp.md
examples/: chat_restructure.py  json_repair.py  shell_repair.py
examples/hooks/: claude-settings.json  codex-hooks.json
examples/hooks/goose-plugin/: plugin.json
scripts/: analyze_benchmark_results.py  collect_harbor_results.py  editbuffer_goose_agent.py  make_benchmark_plots.py  parse_agent_trajectories.py  run_terminal_bench_ab.py
src/editbuffer/: __init__.py  blocks.py  buffer.py  cli.py  errors.py  history.py  hook.py  mcp_server.py  operations.py  resolver.py  selection.py  validators.py
tests/: test_cli.py  test_collect_harbor_results.py  test_editbuffer.py  test_history.py  test_hook.py  test_mcp_server.py  test_mcp_stdio_eval.py  test_metrics.py  test_parse_agent_trajectories.py  test_run_terminal_bench_ab.py
(+57 files in other folders)
