[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "editbuffer"
version = "0.2.1"
description = "Selection-based mutable output buffer for LLM tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "averagedigital" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.scripts]
editbuffer = "editbuffer.cli:main"
editbuffer-mcp = "editbuffer.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
editbuffer = ["py.typed"]
